revert last checkin